<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login">

    <ImageView
        android:id="@+id/img_background_login"
        android:layout_width="450dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_foreground_login"
        android:layout_width="460dp"
        android:layout_height="340dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_fr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/img_shadow"
        android:layout_width="460dp"
        android:layout_height="340dp"
        android:scaleType="centerCrop"
        android:src="@drawable/shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_shadow"
        app:layout_constraintEnd_toEndOf="@id/img_shadow"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/img_shadow"
        app:layout_constraintTop_toTopOf="@id/img_shadow"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:text="@string/email"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/img_shadow"
        app:layout_constraintTop_toTopOf="@id/img_shadow" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="353dp"
        android:layout_height="41dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input"
        android:hint="@string/hint_email"
        android:paddingStart="10dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/img_shadow"
        app:layout_constraintEnd_toEndOf="@id/img_shadow"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="@id/img_shadow"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:text="@string/pass"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/img_shadow"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="353dp"
        android:layout_height="41dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:background="@drawable/custom_input"
        android:hint="@string/hint_password"
        android:paddingStart="10dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/img_shadow"
        app:layout_constraintEnd_toEndOf="@id/img_shadow"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="@id/img_shadow"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/img_shadow"
        app:layout_constraintEnd_toEndOf="@id/img_shadow"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="@id/img_shadow"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_goSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_signUp"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/img_shadow"
        app:layout_constraintEnd_toEndOf="@id/img_shadow"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="@id/img_shadow"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>