<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.material.search.SearchBar>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/search"
        app:layout_anchor="@id/search_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.material.search.SearchView>

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/camera"
        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/search_bar"
        app:layout_constraintTop_toTopOf="@+id/search_bar" />

    <ImageView
        android:id="@+id/iv_homepage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/homepage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_allrecipe"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:src="@drawable/all_recipes"
        app:layout_constraintTop_toBottomOf="@+id/iv_homepage"
        app:layout_constraintEnd_toStartOf="@+id/iv_favorite"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:src="@drawable/favorite"
        app:layout_constraintStart_toEndOf="@+id/iv_allrecipe"
        app:layout_constraintTop_toBottomOf="@+id/iv_homepage"
        app:layout_constraintEnd_toStartOf="@+id/iv_ingredients"
        app:layout_constraintHorizontal_bias="0.5" />

    <ImageView
        android:id="@+id/iv_ingredients"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:src="@drawable/ingredients"
        app:layout_constraintStart_toEndOf="@+id/iv_favorite"
        app:layout_constraintTop_toBottomOf="@+id/iv_homepage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/tv_allrecipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allrecipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_allrecipe"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/iv_allrecipe"
        app:layout_constraintTop_toBottomOf="@+id/iv_allrecipe"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/tv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_favorite"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/iv_favorite"
        app:layout_constraintTop_toBottomOf="@+id/iv_favorite"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/tv_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_ingredients"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="@+id/iv_ingredients"
        app:layout_constraintTop_toBottomOf="@+id/iv_ingredients"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/tv_extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommended"
        android:textSize="25sp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_favorite"
        app:layout_constraintStart_toStartOf="@+id/tv_favorite"
        app:layout_constraintTop_toBottomOf="@+id/tv_favorite"
        app:layout_constraintVertical_bias="0.06" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recommend"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_extra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>